[FIXED #90994176] Fix of image resizor.
- Image resizor was too wide and not centered vertically on large screens.
  Now the image resizor has the width of image canvas and centers vertically.
- The buttons for rotating and submitting image are styled to match
similar UI buttons.
- Added "x" button to close image resizor without changes.

--- a/src/client/scss/x/_main.scss
+++ b/src/client/scss/x/_main.scss
@@ -223,6 +223,20 @@ button.btn-clear {
 	background: none;
 }
 
+button.btn-edit {
+	padding: 6px 12px;
+	border: 1px solid transparent;
+	white-space: nowrap;
+	padding: 6px 12px;
+	font-weight: normal;
+	text-align: center;
+	vertical-align: middle;
+	cursor: pointer;
+	font-size: $font-size-middle;
+	line-height: 1.42857;
+	background-color: #b0b0b0;
+}
+
 button.btn-floating {
 	position: absolute;
 }
